[package]
name = "user_agent_evolved"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user_agent_evolved"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
hyper = { version = "0.14", features = ["full"] }
